--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ SOURCE_DB_NAME=abogoboga.com
 
 # db vps antum
 DEST_DB_HOST=awikwok.com
+DEST_DB_PORT=083865478455
 DEST_DB_USER=awikwok.com
 DEST_DB_PASSWORD=awikwok.com
 DEST_DB_NAME=awikwok.com
